and the classes have been renamed to be more descriptive and general. Specifically, there are
now three mode solvers available: Mode1DTE, Mode1DTM, and Mode2D. Furthermore, there are 3
equivalent Maxwell solvers available: Maxwell2DTE, Maxwell2DTM, Maxwell3D. All of these solvers
can be found in emopt.solvers.

2.


Released on May 6, 2019
-----------------------

This is a major update. Please read through each of these changes carefully and
update your code as needed. Code built upon previous version of EMopt are not
guaranteed to run without errors.

1. New versioning format based on YYYY.MM.DD.

2. Changed names of AdjointMethodFM and AdjointMethodPNF to AdjointMethodFM2D
and AdjointMethodPNF2D. This is to distinguish it from the new
AdjointMethodPNF3D implementation. Note: This will break your code, but is
easily fixed by tacking '2D' onto AdjointMethodPNF.

3. Introduced AdjointMethodPNF3D class. This makes it easier to implement
figures of merit which are normalized with respect to power in 3D simulations.
The implementation is very similar to its 2D counterpart. See the
MMI_splitter_3D exmaple for a demonstration of how to use it.

4. Added a gaussian_mode function which calculates the electric and magnetic
field of an approximate fiber mode. This is useful for grating couplers and the
like.

5. ModeFullVector.get_field and ModeFullVector.get_field_interp have been
updated to return non-squeezed fields (i.e. 3D arrays with one dimension equal
to 1). This reduces the need for additional reshaping code when using mode
fields for figures of merit. In order to plot the result of a ModeFullVector
calculation, you can supply the optional squeeze argument to get_field_interp.
See wg_modes_3D.py for an example.

6. Fixed a bug in  the ModeTM solver which caused symmetries to not work
properly.

7. Improved performance of FDFD_TE.update and FDFD_TM.update. In some cases,
the update can be 2x faster. This will speed up gradient calculations in 2D.
